crates/jolt_kotlin_syntax/tests/snapshots/imported_fixtures__ktfmt_parser_summary.snap
---
source: crates/jolt_kotlin_syntax/tests/imported_fixtures.rs
expression: ktfmt_summary.render()
---
suite: ktfmt
files: 72
reconstructed changed: 0

diagnostics:
  <none>: 0
