crates/jolt_kotlin_syntax/tests/snapshots/imported_fixtures__maplibre_compose_parser_summary.snap
---
source: crates/jolt_kotlin_syntax/tests/imported_fixtures.rs
expression: maplibre_summary.render()
---
suite: maplibre-compose
files: 484
reconstructed changed: 0

diagnostics:
  <none>: 0
